// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Caption renders 1`] = `
<span
  className="sc-jLFzpH kFTwYx"
>
  Caption
</span>
`;

exports[`Caption renders colors 1`] = `
<div
  className="flex justify-around w-full items-center"
>
  <span
    className="sc-jLFzpH kFTwYx"
  >
    Default color is Bulma
  </span>
  <span
    className="sc-jLFzpH ezKrSA"
    color="piccolo.100"
  >
    Piccolo
  </span>
  <span
    className="sc-jLFzpH eLJwue"
    color="trunks.100"
  >
    Trunks
  </span>
  <span
    className="sc-jLFzpH butrIU"
    color="krillin.100"
  >
    Krillin
  </span>
</div>
`;

exports[`Caption renders font weights 1`] = `
<div
  className="flex justify-around w-full items-center"
>
  <span
    className="sc-jLFzpH kFTwYx"
  >
    Default font-weight is bold
  </span>
  <span
    className="sc-jLFzpH fFNGNs"
  >
    Font-weight is regular
  </span>
</div>
`;

exports[`Caption renders semantic tags 1`] = `
<div
  className="flex justify-around w-full items-center"
>
  <span
    className="sc-jLFzpH kFTwYx"
  >
    Span is a default tag
  </span>
  <p
    className="sc-jLFzpH kFTwYx"
  >
    Paragraph tag
  </p>
  <label
    className="sc-jLFzpH kFTwYx"
  >
    Label tag
  </label>
</div>
`;

exports[`Caption renders sizes 1`] = `
<div
  className="flex justify-around w-full items-center"
>
  <span
    className="sc-jLFzpH kFTwYx"
  >
    Default font-size is 10px
  </span>
  <span
    className="sc-jLFzpH focVNI"
    size={9}
  >
    Size is 9px
  </span>
</div>
`;

exports[`Caption renders text-align 1`] = `
<div
  className="flex justify-around w-full items-center"
>
  <span
    className="sc-jLFzpH kFTwYx"
  >
    Text-align is not specified
  </span>
  <span
    className="sc-jLFzpH kQjtXK"
  >
    Centered text
  </span>
  <span
    className="sc-jLFzpH dPXKKt"
  >
    Right alignment
  </span>
</div>
`;
